[metadata]
name = gerrit-powered-agenda
summary = Automates process for testing and publishing changes to OpenStack meetings using existing OpenStack project infrastructure.
description-file =
    README.rst
author = NDSU IBM Capstone Group
author-email = joshua.tan@ndsu.edu
home-page = https://github.com/openstack-infra/gerrit-powered-agenda
classifier =
    Intended Audience :: OpenStack Community
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.3

[global]
setup-hooks =
    pbr.hooks.setup_hook
