[metadata]
name = yaml2ical
summary = Convert YAML meeting descriptions into iCalendar files
description-file =
    README.rst
author = NDSU IBM Capstone Group & OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = http://ci.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = yaml2ical

[entry_points]
console_scripts =
    yaml2ical = yaml2ical.cli:main
